[gd_scene load_steps=4 format=3 uid="uid://680paiqoejyv"]

[ext_resource type="Script" uid="uid://bnbve0lpwtjxt" path="res://levels.gd" id="1_5k54k"]
[ext_resource type="Texture2D" uid="uid://djcmojmu7o2so" path="res://platformer_assets/big_.png" id="1_48rmr"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_02xe8"]
bg_color = Color(0.811765, 0.576471, 0.403922, 1)

[node name="levels" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_5k54k")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 0
offset_left = -93.0
offset_top = -50.0
offset_right = 777.0
offset_bottom = 380.0
color = Color(0.656444, 0.492298, 0.26437, 1)

[node name="Button" type="Button" parent="."]
layout_mode = 0
offset_left = 66.0
offset_top = 21.0
offset_right = 326.0
offset_bottom = 145.0
scale = Vector2(0.666932, 0.841935)
icon = ExtResource("1_48rmr")
flat = true

[node name="Label" type="Label" parent="Button"]
layout_mode = 0
offset_left = 44.9821
offset_top = 35.6322
offset_right = 209.982
offset_bottom = 75.6322
theme_override_font_sizes/font_size = 44
text = "easy level"

[node name="Button2" type="Button" parent="."]
layout_mode = 0
offset_left = 244.0
offset_top = 21.0
offset_right = 504.0
offset_bottom = 145.0
scale = Vector2(0.666932, 0.841935)
icon = ExtResource("1_48rmr")
flat = true

[node name="Label" type="Label" parent="Button2"]
layout_mode = 0
offset_left = 34.4863
offset_top = 33.2567
offset_right = 232.486
offset_bottom = 73.2567
theme_override_font_sizes/font_size = 44
text = "normal level"

[node name="Button3" type="Button" parent="."]
layout_mode = 0
offset_left = 417.0
offset_top = 22.0
offset_right = 677.0
offset_bottom = 146.0
scale = Vector2(0.666932, 0.841935)
theme_override_styles/focus = SubResource("StyleBoxFlat_02xe8")
icon = ExtResource("1_48rmr")
flat = true

[node name="Label" type="Label" parent="Button3"]
layout_mode = 0
offset_left = 46.4815
offset_top = 29.6935
offset_right = 211.481
offset_bottom = 69.6935
theme_override_font_sizes/font_size = 44
text = "hard level"

[node name="Button4" type="Button" parent="."]
layout_mode = 0
offset_left = 236.0
offset_top = 136.0
offset_right = 496.0
offset_bottom = 260.0
scale = Vector2(0.732868, 1.00255)
icon = ExtResource("1_48rmr")
flat = true

[node name="Label" type="Label" parent="Button4"]
layout_mode = 0
offset_left = 46.4815
offset_top = 29.6935
offset_right = 211.481
offset_bottom = 69.6935
theme_override_font_sizes/font_size = 44
text = "main menu"

[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
[connection signal="pressed" from="Button2" to="." method="_on_button_2_pressed"]
[connection signal="pressed" from="Button3" to="." method="_on_button_3_pressed"]
[connection signal="pressed" from="Button4" to="." method="_on_button_4_pressed"]
